--- a/Task3/index-africa.html
+++ b/Task3/index-africa.html
@@ -204,7 +204,7 @@
           </div>
         </article>
         <article class="cardx">
-          <div class="avatar"><img src="img/Bibiana Buenaventura Lorenzo.jpg" alt="Portrait of Bibiana Buenaventura Lorenzo from the Philippines" loading="lazy"></div>
+          <div class="avatar"><img src="img/Bibiana-Buenaventura-Lorenzo.jpg" alt="Portrait of Bibiana Buenaventura Lorenzo from the Philippines" loading="lazy"></div>
           <div class="meta">
             <div class="name">Bibiana Buenaventura Lorenzo <span class="flag">🇵🇭</span></div>
             <div class="role">Platform Engineer — Manila, Philippines</div>
