--- a/Task3/index-africa.html
+++ b/Task3/index-africa.html
@@ -164,9 +164,9 @@
       <h3>Our Engineers</h3>
       <div class="grid" aria-label="Engineer profiles">
         <article class="cardx">
-          <div class="avatar"><img src="img/Berenice-Brandão-Lira.jpg" alt="Portrait of Berenice Brandão Lira from Brazil" loading="lazy"></div>
+          <div class="avatar"><img src="img/Berenice-Brandao-Lira.jpg" alt="Portrait of Berenice Brandao Lira from Brazil" loading="lazy"></div>
           <div class="meta">
-            <div class="name">Berenice Brandão Lira <span class="flag">🇧🇷</span></div>
+            <div class="name">Berenice Brandao Lira <span class="flag">🇧🇷</span></div>
             <div class="role">Principal Cloud Network Engineer — São Paulo, Brazil</div>
             <div class="tags"><span class="tag">GCP VPC/NCC</span><span class="tag">HA VPN</span><span class="tag">Terraform</span></div>
           </div>
