--- a/Task3/index-africa.html
+++ b/Task3/index-africa.html
@@ -164,7 +164,7 @@
       <h3>Our Engineers</h3>
       <div class="grid" aria-label="Engineer profiles">
         <article class="cardx">
-          <div class="avatar"><img src="/var/www/html/img/Berenice-Brandao-Lira.jpg" alt="Portrait of Berenice Brandao Lira from Brazil" loading="lazy"></div>
+          <div class="avatar"><img src="/img/Berenice-Brandao-Lira.jpg" alt="Portrait of Berenice Brandao Lira from Brazil" loading="lazy"></div>
           <div class="meta">
             <div class="name">Berenice Brandao Lira <span class="flag">🇧🇷</span></div>
             <div class="role">Principal Cloud Network Engineer — São Paulo, Brazil</div>
@@ -172,7 +172,7 @@
           </div>
         </article>
         <article class="cardx">
-          <div class="avatar"><img src="/var/www/html/img/Bunko-Biyori-Lee.jpg" alt="Portrait of Bunko Biyori Lee from Japan" loading="lazy"></div>
+          <div class="avatar"><img src="/img/Bunko-Biyori-Lee.jpg" alt="Portrait of Bunko Biyori Lee from Japan" loading="lazy"></div>
           <div class="meta">
             <div class="name">Bunko Biyori Lee <span class="flag">🇯🇵</span></div>
             <div class="role">Site Reliability Engineer — Tokyo, Japan</div>
@@ -180,7 +180,7 @@
           </div>
         </article>
         <article class="cardx">
-          <div class="avatar"><img src="/var/www/html/img/Bianca-Bianchi-Lombardi.jpg" alt="Portrait of Bianca Bianchi Lombardi from Italy" loading="lazy"></div>
+          <div class="avatar"><img src="/img/Bianca-Bianchi-Lombardi.jpg" alt="Portrait of Bianca Bianchi Lombardi from Italy" loading="lazy"></div>
           <div class="meta">
             <div class="name">Bianca Bianchi Lombardi <span class="flag">🇮🇹</span></div>
             <div class="role">Cloud Solutions Architect — Milan, Italy</div>
@@ -188,7 +188,7 @@
           </div>
         </article>
         <article class="cardx">
-          <div class="avatar"><img src="/var/www/html/img/Budsaba-Boonraksa-Lamphun.jpg" alt="Portrait of Budsaba Boonraksa Lamphun from Thailand" loading="lazy"></div>
+          <div class="avatar"><img src="/img/Budsaba-Boonraksa-Lamphun.jpg" alt="Portrait of Budsaba Boonraksa Lamphun from Thailand" loading="lazy"></div>
           <div class="meta">
             <div class="name">Budsaba Boonraksa Lamphun <span class="flag">🇹🇭</span></div>
             <div class="role">Security Engineer — Bangkok, Thailand</div>
@@ -196,7 +196,7 @@
           </div>
         </article>
         <article class="cardx">
-          <div class="avatar"><img src="/var/www/html/img/Bessie-Belle-Lancaster.jpg" alt="Portrait of Bessie Belle Lancaster from the United States" loading="lazy"></div>
+          <div class="avatar"><img src="/img/Bessie-Belle-Lancaster.jpg" alt="Portrait of Bessie Belle Lancaster from the United States" loading="lazy"></div>
           <div class="meta">
             <div class="name">Bessie Belle Lancaster <span class="flag">🇺🇸</span></div>
             <div class="role">DevOps Engineer — Baltimore, MD, USA</div>
@@ -204,7 +204,7 @@
           </div>
         </article>
         <article class="cardx">
-          <div class="avatar"><img src="/var/www/html/img/Bibiana-Buenaventura-Lorenzo.jpg" alt="Portrait of Bibiana Buenaventura Lorenzo from the Philippines" loading="lazy"></div>
+          <div class="avatar"><img src="/img/Bibiana-Buenaventura-Lorenzo.jpg" alt="Portrait of Bibiana Buenaventura Lorenzo from the Philippines" loading="lazy"></div>
           <div class="meta">
             <div class="name">Bibiana Buenaventura Lorenzo <span class="flag">🇵🇭</span></div>
             <div class="role">Platform Engineer — Manila, Philippines</div>
